Bug 834120 - Table cell accessibles not exposed for CSS table without table-row, r=tbsaunde